# balance-proxy

./: .env  .env.example  .gitignore  README.md  dev  pkg
firecrawl_bot/: bot.py  cli.py  firecrawl_reg.py  mail_tm_utils.py  requirements.txt  run  tavily_reg.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/mcp/: tavily-local-proxy-mcp.mjs
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
