[package]
name = "balance-proxy-desktop"
version = "0.1.0"
description = "Balance proxy for Firecrawl and Tavily."
authors = ["you"]
edition = "2021"

[lib]
name = "balance_proxy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
